--- a/css/style.css
+++ b/css/style.css
@@ -286,8 +286,10 @@ input[type="file"] {
 }
 
 .file__input:hover{
-    background-color : #597250;
+    background-color : red;
 }
+
+
 .form__button:active{
     top: 3px;
     box-shadow: 0 2px 0 #161b13;
